<!--
  ~ Copyright (c) 2021. Team Biscochito.
  ~
  ~ Licensed under the GNU General Public License v3.0
  ~
  ~ https://www.gnu.org/licenses/gpl-3.0.html
  ~
  ~ Permissions of this strong copyleft license are conditioned on making available complete
  ~ source code of licensed works and modifications, which include larger works using a licensed
  ~ work, under the same license. Copyright and license notices must be preserved. Contributors
  ~ provide an express grant of patent rights.
  -->

<resources>
    <string name="app_name">Animales Salvajes</string>
    <string name="btCartas">Cartas</string>
    <string name="btTutorial">Tutorial</string>
    <string name="tvTitulo1">ANIMALES</string>
    <string name="tvTitulo2">SALVAJES</string>
    <string name="tvCreditosMayus">CRÉDITOS</string>
    <string name="imgMusica">Música</string>
    <string name="imgUser">Perfil</string>
    <string name="contAtras">Atrás</string>
    <string name="tvNombreGabriel">Gabriel Guerrero Expósito</string>
    <string name="tvNombreManuel">Manuel García Arquelladas</string>
    <string name="tvNombreOleg">Oleg Fernández-Llebrez Rodríguez</string>
    <string name="tvNombrePablo">Pablo Javier Jáimez Cobos</string>
    <string name="tvElegirJugador">Elige tu jugador</string>
    <string name="tvAnimalesSalvajes">Animales Salvajes</string>
    <string name="tvTopTrump">Top Trump - El videojuego</string>
    <string name="tvIntroduceClave">Introduce la clave que se usará para administrar el juego</string>
    <string name="tvAdvertenciaClave">La clave no podrá ser modificada en un futuro</string>
    <string name="contImagen">Imagen</string>
    <string name="tvClaveAcceso">Clave de acceso</string>
    <string name="textEntrar">Entrar</string>
    <string name="tvTeamCopyright">Team Biscochito © 2021</string>
    <string name="textAjustes">Ajustes</string>
    <string name="textIntroduceUnaClave">Introduce una clave</string>
    <string name="tvParaAccederAAdmin">Para acceder a las opciones avanzadas, es necesaria la clave de administrador</string>
    <string name="btAcceder">Acceder</string>
    <string name="textAccesoDenegado">Acceso denegado</string>
    <string name="contCorreo">Correo</string>
    <string name="tvCorreoElectronicoSinPuntos">Correo electrónico</string>
    <string name="tvBorrarCorreo">Borrar</string>
    <string name="tvCorreoEnviar">Enviar</string>
    <string name="textIntroduceCorreo">Introduce un correo electrónico</string>
    <string name="textCorreoNoValido">El correo electrónico no es válido</string>
    <string name="textCorreoSubject">Animales Salvajes - Puntuación acumulada</string>
    <string name="textNoSePudoEnviarCorreo">No se pudo enviar el correo electrónico</string>
    <string name="tvEmailEnviadoExito">Si finalmente has decidido mandar el mensaje, comprueba tu correo</string>
    <string name="alertBateriaAgotarse">La batería del dispositivo está a punto de agotarse</string>
    <string name="contBateria">Batería</string>
    <string name="textModoAdmin">¡Hola, admin!</string>
    <string name="textJugadores">Jugadores</string>
    <string name="textVasASalirDeAdmin">¿Seguro que quieres salir del modo administrador?</string>
    <string name="tvEditar">Editar</string>
    <string name="contAdd">Añadir</string>
    <string name="tvAddJugador">Añadir jugador</string>
    <string name="alertCuidado">Cuidado</string>
    <string name="tvConfirmarBorrarJugador">¿Seguro que quieres borrar a este jugador?</string>
    <string name="tvConfirmarBorrarCarta">¿Seguro que quieres borrar esta carta?</string>
    <string name="tvSeleccionaAvatar">Selecciona un avatar:</string>
    <string name="tvIntroduceNombre">Introduce un nombre:</string>
    <string name="tvIntroduceNombreSinPuntos">Introduce un nombre</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvNombreYaEnUso">El nombre ya está en uso</string>
    <string name="alertRvVacioChooseUser">Oops, parece que no hemos encontrado nada. Añade nuevos jugadores desde las opciones avanzadas</string>
    <string name="tvEditarJugador">Editar jugador</string>
    <string name="tvNuevoNombre">Nuevo nombre:</string>
    <string name="textSeleccionarActual">Seleccionar actual</string>
    <string name="textPreguntasContestadas">Preguntas contestadas:</string>
    <string name="textPreguntasAcertadas">Preguntas acertadas:</string>
    <string name="textPorcentajeAciertos">Porcentaje de aciertos:</string>
    <string name="textAnimal">Animal</string>
    <string name="textAlturaMedia">Altura</string>
    <string name="textPesoMedio">Peso</string>
    <string name="textLongitudMedia">Longitud</string>
    <string name="textVelocidadMedia">Velocidad</string>
    <string name="textPoderMortifero">Poder</string>
    <string name="textVasASalirDeLaApp">¿Seguro que quieres salir de Animales Salvajes?</string>
    <string name="textGirarCarta">Girar</string>
    <string name="infoDeslizaParaVerCartas">Desliza ↔ para ver todas las cartas</string>
    <string name="contLeon">León</string>
    <string name="textQuieresVerElTutorialInicio">Parece que es la primera vez que entras a Animales Salvajes. ¿Quieres ver el tutorial?</string>
    <string name="textAunqueCancelesTutorialDialog">Aunque canceles, siempre podrás ver el tutorial más adelante</string>
    <string name="textEstasSeguroSalirTutorial">¿Estás seguro que quieres salir del tutorial?</string>
    <string name="textSalirTutorialVerOtraVez">Siempre podrás verlo otra vez</string>
    <string name="textLogo">Logo</string>
    <string name="textSalir">Salir</string>
    <string name="tvPuntosMas">Preguntas acertadas:</string>
    <string name="tvSalirVolverAlMenu">¿Quieres salir y volver al menú principal?</string>
    <string name="textDeEsteAnimal">de este animal?</string>
    <string name="tvVisitarNuestraWeb">¡No te olvides de visitar nuestra página web!</string>
    <string name="tvCopiarAlPortapapeles">Copiar</string>
    <string name="tvAddCarta">Añadir carta</string>
    <string name="textPinchaNombreParaInfoCarta">Pulsa en el nombre para + info</string>
    <string name="textPreguntaCorrecta">¡Correcto!</string>
    <string name="textPreguntaErronea">¡Has fallado!</string>
    <string name="tvEditarCarta">Editar carta</string>
    <string name="tvNombreDemasiadoLargo">Nombre demasiado largo</string>
    <string name="tvNombreDosPuntos">Nombre:</string>
    <string name="tvDescripcionDosPuntos">Descripción:</string>
    <string name="tvDesc">Descripción</string>
    <string name="tvUrlImagenDosPuntos">URL de la imagen:</string>
    <string name="tvURL">URL</string>
    <string name="tvAlturaDosPuntos">Altura:</string>
    <string name="tvPesoDosPuntos">Peso:</string>
    <string name="tvLongitudDosPuntos">Longitud:</string>
    <string name="tvVelocidadDosPuntos">Velocidad:</string>
    <string name="tvPoderDosPuntos">Poder:</string>
    <string name="tvNuevoNombreDosPuntos">Nuevo nombre:</string>
    <string name="tvNuevaDescripcionDosPuntos">Nueva descripción:</string>
    <string name="tvNuevaUrlImagenDosPuntos">Nueva URL de la imagen:</string>
    <string name="tvNuevaAlturaDosPuntos">Nueva altura:</string>
    <string name="tvNuevoPesoDosPuntos">Nuevo peso:</string>
    <string name="tvNuevaLongitudDosPuntos">Nueva longitud:</string>
    <string name="tvNuevaVelocidadDosPuntos">Nueva velocidad:</string>
    <string name="tvNuevoPoderDosPuntos">Nuevo poder:</string>
    <string name="alertAlgunCampoEstaVacio">Algún campo está vacío</string>
    <string name="alertNombreNoValido">Nombre no válido</string>
    <string name="alertDescDemasiadoLarga">Descripción demasiado larga</string>
    <string name="alertAlturaNoValida">Altura no válida (máx. 9999)</string>
    <string name="alertPesoNoValido">Peso no válido (máx. 9999)</string>
    <string name="alertLongitudNoValida">Longitud no válida (máx. 9999)</string>
    <string name="alertVelocidadNoValida">Velocidad no válida (máx. 9999)</string>
    <string name="alertPoderNoValido">Poder no válido (1 – 10)</string>
    <string name="textImpotar">Importar</string>
    <string name="btBuscaEnInternet">Buscar en internet</string>
    <string name="variableDeJuego">Variable</string>
    <string name="item_vp_avatar_descripcion">Avatar</string>
    <string name="cartaNoSePuedeModificar">Esta carta no se puede modificar</string>
    <string name="InternetDesconectado">Parece que no tienes conexión a internet, comprueba la conexión y vuelve a intentarlo</string>
    <string name="TienesTodasLasCartas">No se ha encontrado ninguna carta o ya posees todas las cartas disponibles</string>

    <array name="magnitudesAltura">
        <item>m</item>
        <item>cm</item>
    </array>

    <array name="magnitudesVelocidad">
        <item>km/h</item>
    </array>

    <array name="magnitudesPeso">
        <item>kg</item>
        <item>g</item>
        <item>T</item>
    </array>

    <array name="magnitudesLongitud">
        <item>m</item>
        <item>cm</item>
    </array>
</resources>