<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/creditos_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDialogCreditosTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvCreditosMayus"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgDialogCreditosBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/contAtras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/tvDialogCreditos1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvNombreGabriel"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvDialogCreditos2"
            app:layout_constraintEnd_toStartOf="@+id/gdDialogCreditos3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdDialogCreditos2"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogCreditosTitulo" />

        <TextView
            android:id="@+id/tvDialogCreditos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvNombreManuel"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvDialogCreditos3"
            app:layout_constraintEnd_toStartOf="@+id/gdDialogCreditos3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdDialogCreditos2"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogCreditos1" />

        <TextView
            android:id="@+id/tvDialogCreditos3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvNombreOleg"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvDialogCreditos4"
            app:layout_constraintEnd_toStartOf="@+id/gdDialogCreditos3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdDialogCreditos2"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogCreditos2" />

        <TextView
            android:id="@+id/tvDialogCreditos4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvNombrePablo"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gdDialogCreditos1"
            app:layout_constraintEnd_toStartOf="@+id/gdDialogCreditos3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdDialogCreditos2"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogCreditos3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdDialogCreditos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.855" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdDialogCreditos2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdDialogCreditos3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.918" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvTeamCopyright"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gdDialogCreditos1"
            app:layout_constraintEnd_toStartOf="@+id/gdDialogCreditos3"
            app:layout_constraintStart_toStartOf="@+id/gdDialogCreditos2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>