<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:background="@drawable/ajustes_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvParaAccederAAdmin"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toTopOf="@+id/guideline30" />

        <EditText
            android:id="@+id/claveEtAjustes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:fontFamily="@font/schoolbell"
            android:hint="@string/tvClaveAcceso"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.86" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <View
            android:id="@+id/viewBtAccederAjustesDialog"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bt_acceder_ajustes"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/claveEtAjustes" />

        <TextView
            android:id="@+id/tvAccederAjustesDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/schoolbell"
            android:text="@string/btAcceder"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/viewBtAccederAjustesDialog"
            app:layout_constraintEnd_toEndOf="@+id/viewBtAccederAjustesDialog"
            app:layout_constraintStart_toStartOf="@+id/viewBtAccederAjustesDialog"
            app:layout_constraintTop_toTopOf="@+id/viewBtAccederAjustesDialog" />

        <TextView
            android:id="@+id/tvAlertaAjustesDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/schoolbell"
            android:textAlignment="center"
            android:textColor="#D3443A"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/viewBtAccederAjustesDialog" />

        <ImageView
            android:id="@+id/imgBackAjustesDialog"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/contAtras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:srcCompat="@drawable/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>