<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B97A57"
    tools:context=".view.fragment.EditPlayerFragment"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/admin_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvEditPlayer_Alerta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/schoolbell"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#D3443A"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/viewEditPlayer_Editar"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4"
            app:layout_constraintTop_toBottomOf="@+id/vpEditPlayer_Avatar" />

        <View
            android:id="@+id/viewEditPlayer_Editar"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/tablero_2"
            app:layout_constraintBottom_toTopOf="@+id/gdEditPlayer3"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpEditPlayer_Avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tvEditPlayer_Alerta"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4"
            app:layout_constraintTop_toBottomOf="@+id/viewEditPlayer_Selecciona" />

        <TextView
            android:id="@+id/tvEditPlayer_Selecciona"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvSeleccionaAvatar"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/viewEditPlayer_Selecciona"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4"
            app:layout_constraintTop_toBottomOf="@+id/etEditPlayer_Nombre" />

        <EditText
            android:id="@+id/etEditPlayer_Nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:fontFamily="@font/schoolbell"
            android:hint="@string/tvNombre"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4"
            app:layout_constraintTop_toBottomOf="@+id/tvEditPlayer_Nombre" />

        <TextView
            android:id="@+id/tvEditPlayer_Nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvNuevoNombre"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4"
            app:layout_constraintTop_toTopOf="@+id/gdEditPlayer2" />

        <View
            android:id="@+id/viewEditPlayer_Back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/back_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gdEditPlayer1" />

        <TextView
            android:id="@+id/tvEditPlayer_Titulo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/schoolbell"
            android:gravity="center|top"
            android:rotation="-7"
            android:text="@string/tvEditarJugador"
            android:textColor="#472C06"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gdEditPlayer2"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4"
            app:layout_constraintTop_toTopOf="@+id/gdEditPlayer1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEditPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEditPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEditPlayer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.91" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEditPlayer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.148" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEditPlayer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.84" />

        <TextView
            android:id="@+id/tvEditPlayer_Editar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/schoolbell"
            android:text="@string/tvEditar"
            android:textAlignment="center"
            android:textColor="#472C06"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/viewEditPlayer_Editar"
            app:layout_constraintEnd_toEndOf="@+id/viewEditPlayer_Editar"
            app:layout_constraintStart_toStartOf="@+id/viewEditPlayer_Editar"
            app:layout_constraintTop_toTopOf="@+id/viewEditPlayer_Editar" />

        <View
            android:id="@+id/viewEditPlayer_Selecciona"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:background="@drawable/bt_enviar_correo"
            app:layout_constraintBottom_toTopOf="@+id/vpEditPlayer_Avatar"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4"
            app:layout_constraintTop_toBottomOf="@+id/tvEditPlayer_Selecciona" />

        <TextView
            android:id="@+id/tvEditPlayer_SeleccionaActual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/schoolbell"
            android:text="@string/textSeleccionarActual"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/viewEditPlayer_Selecciona"
            app:layout_constraintEnd_toEndOf="@+id/viewEditPlayer_Selecciona"
            app:layout_constraintStart_toStartOf="@+id/viewEditPlayer_Selecciona"
            app:layout_constraintTop_toTopOf="@+id/viewEditPlayer_Selecciona" />

        <View
            android:id="@+id/viewEditPlayer_Previous"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/previous"
            app:layout_constraintBottom_toBottomOf="@+id/vpEditPlayer_Avatar"
            app:layout_constraintEnd_toStartOf="@+id/vpEditPlayer_Avatar"
            app:layout_constraintStart_toStartOf="@+id/gdEditPlayer4"
            app:layout_constraintTop_toTopOf="@+id/vpEditPlayer_Avatar" />

        <View
            android:id="@+id/viewEditPlayer_Next"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/next"
            app:layout_constraintBottom_toBottomOf="@+id/vpEditPlayer_Avatar"
            app:layout_constraintEnd_toStartOf="@+id/gdEditPlayer5"
            app:layout_constraintStart_toEndOf="@+id/vpEditPlayer_Avatar"
            app:layout_constraintTop_toTopOf="@+id/vpEditPlayer_Avatar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>